---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nderive total = case [total < 10 => total * 2, true => total]\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  derive unit_price = case [unit_price < 1 => unit_price * 2, true => unit_price]\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.prql
---
frames:
- - 1:14-74
  - columns:
    - !All
      input_id: 52
      except: []
    - !Single
      name:
      - total
      target_id: 53
      target_name: null
    inputs:
    - id: 52
      name: invoices
      table:
      - default_db
      - invoices
- - 1:75-116
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 66
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 67
      target_name: null
    - !Single
      name:
      - total
      target_id: 68
      target_name: null
    inputs:
    - id: 52
      name: invoices
      table:
      - default_db
      - invoices
- - 1:117-123
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 66
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 67
      target_name: null
    - !Single
      name:
      - total
      target_id: 68
      target_name: null
    inputs:
    - id: 52
      name: invoices
      table:
      - default_db
      - invoices
- - 1:156-235
  - columns:
    - !All
      input_id: 19
      except: []
    - !Single
      name:
      - unit_price
      target_id: 20
      target_name: null
    inputs:
    - id: 19
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:238-288
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 33
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 34
      target_name: null
    - !Single
      name:
      - unit_price
      target_id: 35
      target_name: null
    inputs:
    - id: 19
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:291-297
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 33
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 34
      target_name: null
    - !Single
      name:
      - unit_price
      target_id: 35
      target_name: null
    inputs:
    - id: 19
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:124-299
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 66
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 67
      target_name: null
    - !Single
      name:
      - total
      target_id: 68
      target_name: null
    inputs:
    - id: 52
      name: invoices
      table:
      - default_db
      - invoices
    - id: 19
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:300-369
  - columns:
    - !Single
      name:
      - a
      target_id: 75
      target_name: null
    - !Single
      name:
      - b
      target_id: 79
      target_name: null
    inputs:
    - id: 52
      name: invoices
      table:
      - default_db
      - invoices
    - id: 19
      name: invoice_items
      table:
      - default_db
      - invoice_items
nodes:
- id: 19
  kind: Ident
  span: 1:135-153
  ident: !Ident
  - default_db
  - invoice_items
  parent: 32
- id: 20
  kind: Case
  span: 1:176-235
  alias: unit_price
  targets:
  - 21
  - 25
  - 29
  - 30
  parent: 31
- id: 21
  kind: RqOperator
  span: 1:182-196
  targets:
  - 23
  - 24
- id: 23
  kind: Ident
  span: 1:182-192
  ident: !Ident
  - this
  - invoice_items
  - unit_price
  targets:
  - 19
- id: 24
  kind: Literal
  span: 1:195-196
- id: 25
  kind: RqOperator
  span: 1:200-214
  targets:
  - 27
  - 28
- id: 27
  kind: Ident
  span: 1:200-210
  ident: !Ident
  - this
  - invoice_items
  - unit_price
  targets:
  - 19
- id: 28
  kind: Literal
  span: 1:213-214
- id: 29
  kind: Literal
  span: 1:216-220
- id: 30
  kind: Ident
  span: 1:224-234
  ident: !Ident
  - this
  - invoice_items
  - unit_price
  targets:
  - 19
- id: 31
  kind: Tuple
  span: 1:176-235
  children:
  - 20
  parent: 32
- id: 32
  kind: 'TransformCall: Derive'
  span: 1:156-235
  children:
  - 19
  - 31
  parent: 37
- id: 33
  kind: Ident
  span: 1:247-262
  ident: !Ident
  - this
  - invoice_items
  - invoice_line_id
  targets:
  - 19
  parent: 36
- id: 34
  kind: Ident
  span: 1:264-274
  ident: !Ident
  - this
  - invoice_items
  - invoice_id
  targets:
  - 19
  parent: 36
- id: 35
  kind: Ident
  span: 1:276-286
  ident: !Ident
  - this
  - unit_price
  targets:
  - 20
  parent: 36
- id: 36
  kind: Tuple
  span: 1:245-288
  children:
  - 33
  - 34
  - 35
  parent: 37
- id: 37
  kind: 'TransformCall: Select'
  span: 1:238-288
  children:
  - 32
  - 36
  parent: 39
- id: 39
  kind: 'TransformCall: Take'
  span: 1:291-297
  children:
  - 37
  - 40
  parent: 74
- id: 40
  kind: Literal
  parent: 39
- id: 52
  kind: Ident
  span: 1:0-13
  ident: !Ident
  - default_db
  - invoices
  parent: 65
- id: 53
  kind: Case
  span: 1:29-74
  alias: total
  targets:
  - 54
  - 58
  - 62
  - 63
  parent: 64
- id: 54
  kind: RqOperator
  span: 1:35-45
  targets:
  - 56
  - 57
- id: 56
  kind: Ident
  span: 1:35-40
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 52
- id: 57
  kind: Literal
  span: 1:43-45
- id: 58
  kind: RqOperator
  span: 1:49-58
  targets:
  - 60
  - 61
- id: 60
  kind: Ident
  span: 1:49-54
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 52
- id: 61
  kind: Literal
  span: 1:57-58
- id: 62
  kind: Literal
  span: 1:60-64
- id: 63
  kind: Ident
  span: 1:68-73
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 52
- id: 64
  kind: Tuple
  span: 1:29-74
  children:
  - 53
  parent: 65
- id: 65
  kind: 'TransformCall: Derive'
  span: 1:14-74
  children:
  - 52
  - 64
  parent: 70
- id: 66
  kind: Ident
  span: 1:84-95
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 52
  parent: 69
- id: 67
  kind: Ident
  span: 1:97-107
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 52
  parent: 69
- id: 68
  kind: Ident
  span: 1:109-114
  ident: !Ident
  - this
  - total
  targets:
  - 53
  parent: 69
- id: 69
  kind: Tuple
  span: 1:82-116
  children:
  - 66
  - 67
  - 68
  parent: 70
- id: 70
  kind: 'TransformCall: Select'
  span: 1:75-116
  children:
  - 65
  - 69
  parent: 72
- id: 72
  kind: 'TransformCall: Take'
  span: 1:117-123
  children:
  - 70
  - 73
  parent: 74
- id: 73
  kind: Literal
  parent: 72
- id: 74
  kind: 'TransformCall: Append'
  span: 1:124-299
  children:
  - 72
  - 39
  parent: 87
- id: 75
  kind: RqOperator
  span: 1:313-328
  alias: a
  targets:
  - 77
  - 78
  parent: 86
- id: 77
  kind: Ident
  span: 1:313-324
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 66
- id: 78
  kind: Literal
  span: 1:327-328
- id: 79
  kind: RqOperator
  span: 1:334-367
  alias: b
  targets:
  - 81
  - 82
  parent: 86
- id: 81
  kind: Literal
  span: 1:345-346
- id: 82
  kind: RqOperator
  span: 1:348-366
  targets:
  - 84
  - 85
- id: 84
  kind: Ident
  span: 1:348-358
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 67
- id: 85
  kind: Ident
  span: 1:361-366
  ident: !Ident
  - this
  - total
  targets:
  - 68
- id: 86
  kind: Tuple
  span: 1:307-369
  children:
  - 75
  - 79
  parent: 87
- id: 87
  kind: 'TransformCall: Select'
  span: 1:300-369
  children:
  - 74
  - 86
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - invoices
                span: 1:5-13
            span: 1:0-13
          - FuncCall:
              name:
                Ident:
                - derive
                span: 1:14-20
              args:
              - Case:
                - condition:
                    Binary:
                      left:
                        Ident:
                        - total
                        span: 1:35-40
                      op: Lt
                      right:
                        Literal:
                          Integer: 10
                        span: 1:43-45
                    span: 1:35-45
                  value:
                    Binary:
                      left:
                        Ident:
                        - total
                        span: 1:49-54
                      op: Mul
                      right:
                        Literal:
                          Integer: 2
                        span: 1:57-58
                    span: 1:49-58
                - condition:
                    Literal:
                      Boolean: true
                    span: 1:60-64
                  value:
                    Ident:
                    - total
                    span: 1:68-73
                span: 1:29-74
                alias: total
            span: 1:14-74
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:75-81
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:84-95
                - Ident:
                  - invoice_id
                  span: 1:97-107
                - Ident:
                  - total
                  span: 1:109-114
                span: 1:82-116
            span: 1:75-116
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:117-121
              args:
              - Literal:
                  Integer: 5
                span: 1:122-123
            span: 1:117-123
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:124-130
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:135-139
                      args:
                      - Ident:
                        - invoice_items
                        span: 1:140-153
                    span: 1:135-153
                  - FuncCall:
                      name:
                        Ident:
                        - derive
                        span: 1:156-162
                      args:
                      - Case:
                        - condition:
                            Binary:
                              left:
                                Ident:
                                - unit_price
                                span: 1:182-192
                              op: Lt
                              right:
                                Literal:
                                  Integer: 1
                                span: 1:195-196
                            span: 1:182-196
                          value:
                            Binary:
                              left:
                                Ident:
                                - unit_price
                                span: 1:200-210
                              op: Mul
                              right:
                                Literal:
                                  Integer: 2
                                span: 1:213-214
                            span: 1:200-214
                        - condition:
                            Literal:
                              Boolean: true
                            span: 1:216-220
                          value:
                            Ident:
                            - unit_price
                            span: 1:224-234
                        span: 1:176-235
                        alias: unit_price
                    span: 1:156-235
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:238-244
                      args:
                      - Tuple:
                        - Ident:
                          - invoice_line_id
                          span: 1:247-262
                        - Ident:
                          - invoice_id
                          span: 1:264-274
                        - Ident:
                          - unit_price
                          span: 1:276-286
                        span: 1:245-288
                    span: 1:238-288
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:291-295
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:296-297
                    span: 1:291-297
                span: 1:135-297
            span: 1:124-299
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:300-306
              args:
              - Tuple:
                - Binary:
                    left:
                      Ident:
                      - customer_id
                      span: 1:313-324
                    op: Mul
                    right:
                      Literal:
                        Integer: 2
                      span: 1:327-328
                  span: 1:313-328
                  alias: a
                - FuncCall:
                    name:
                      Ident:
                      - math
                      - round
                      span: 1:334-344
                    args:
                    - Literal:
                        Integer: 1
                      span: 1:345-346
                    - Binary:
                        left:
                          Ident:
                          - invoice_id
                          span: 1:348-358
                        op: Mul
                        right:
                          Ident:
                          - total
                          span: 1:361-366
                      span: 1:348-366
                  span: 1:334-367
                  alias: b
                span: 1:307-369
            span: 1:300-369
        span: 1:0-369
    span: 1:0-369
